@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-29T16:17:01Z",
+  "timestamp" : "2022-07-30T01:00:45Z",
   "count_outdated" : 424,
   "uniques_outdated" : 229,
-  "count" : 446,
+  "count" : 447,
   "uniques" : 240,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-07-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
