@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 23,
   "uniques": 2,
   "clones": [
     {
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2022-07-29T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
