@@ -1,3 +1,10 @@
+2022-07-30T01:00:45Z:
+* notice: last 14d: unq all: 2 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 229 424 / 240 446
+* notice: next accum: outdated-unq outdated-all / unq all: 229 424 / 240 447
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-29]
+
 2022-07-29T16:17:01Z:
 * notice: last 14d: unq all: 2 22
 * notice: prev accum: outdated-unq outdated-all / unq all: 228 422 / 240 445
